--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,7 @@ $font-color: #444;
 $font-color-inv: #fff;
 $main-color: #3498db;
 $bgc: #7f8c8d;
+$bgc2: #ddd;
 $fgc: #fff;
 $medium: 1rem;
 $small: $medium/2;
