--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -683,7 +683,7 @@ footer {
   margin-top: 0;
   margin-bottom: 1rem;
   padding: 1rem;
-  background-color: #dddddd;
+  background-color: #e2e2e2;
   text-shadow: 0 1px 0 white;
 }
 .post--title h2 a {
@@ -751,12 +751,13 @@ hr {
 }
 
 blockquote {
-  border-left: 1rem solid #3498db;
+  margin: 1rem;
+  border-left: 1rem solid #e2e2e2;
 }
 blockquote > * {
   margin: 0.5rem 0;
   padding: 1rem;
-  background-color: #dddddd;
+  background-color: #e2e2e2;
 }
 
 code {
