--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -956,11 +956,13 @@ code {
   #dp-dropplets-icon {
     background-color: #3498db !important;
     text-shadow: 0 0 10px transparent !important;
-    -webkit-box-shadow: inset 0 0 20px #196090;
-    -moz-box-shadow: inset 0 0 20px #196090;
-    box-shadow: inset 0 0 20px #196090;
     left: auto !important;
     right: 1rem !important;
     position: absolute !important;
+  }
+  #dp-dropplets-icon:focus, #dp-dropplets-icon:hover {
+    -webkit-box-shadow: inset 0 0 20px #196090;
+    -moz-box-shadow: inset 0 0 20px #196090;
+    box-shadow: inset 0 0 20px #196090;
   }
 }
