--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -112,9 +112,13 @@ code{
 	@media only screen and (max-width: 1139px){
 		background-color: $main-color !important;
 		text-shadow: 0 0 10px transparent !important;
-		@include box-shadow(inset 0 0 20px darken($main-color, 20%));
 		left: auto !important;
 		right: $medium !important;
 		position: absolute !important;
+
+		&:focus,
+		&:hover{
+			@include box-shadow(inset 0 0 20px darken($main-color, 20%));
+		}
 	}
 }
