--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -118,7 +118,7 @@ code{
 
 		&:focus,
 		&:hover{
-			@include box-shadow(inset 0 0 20px darken($main-color, 20%));
+			@include box-shadow(inset 0 0 20px darken($main-color, 20%) !important);
 		}
 	}
 }
