--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,4 +1,6 @@
 header{
+	position: relative;
+
 	& > #brand,
 	& > .nav{
 		@media only screen and (max-width: 1139px){
@@ -14,6 +16,29 @@ header{
 
 	a {
 		display: inline-block;
+	}
+
+	.brand--title{
+		display: none;
+
+		@media only screen and (max-width: 1139px){
+			display: initial;
+		}
+	}
+
+	.brand--image{
+		@include borderbox;
+		max-width: 100%;
+		max-height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		padding: 1px;
+		border-right: 0.5em solid $bgc;
+
+		@media only screen and (max-width: 1139px){
+			display: none;
+		}
 	}
 }
 
