--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -744,6 +744,9 @@ footer {
   }
 }
 
+header {
+  position: relative;
+}
 @media only screen and (max-width: 1139px) {
   header > #brand, header > .nav {
     width: 100%;
@@ -757,6 +760,32 @@ footer {
 }
 #brand a {
   display: inline-block;
+}
+#brand .brand--title {
+  display: none;
+}
+@media only screen and (max-width: 1139px) {
+  #brand .brand--title {
+    display: initial;
+  }
+}
+#brand .brand--image {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1px;
+  border-right: 0.5em solid #7f8c8d;
+}
+@media only screen and (max-width: 1139px) {
+  #brand .brand--image {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 1139px) {
