--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -840,6 +840,7 @@ header {
   list-style-position: outside;
   margin: 0;
   padding: 0;
+  border-top: 0.5rem solid transparent;
 }
 @media only screen and (max-width: 1139px) {
   .nav .sub-nav {
@@ -847,6 +848,7 @@ header {
     position: relative;
     top: 0;
     left: 0;
+    border-top: none;
   }
 }
 .nav .sub-nav li {
@@ -875,7 +877,7 @@ header {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   padding-bottom: 1rem;
 }
 .post:last-child {
