--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -944,7 +944,7 @@ header {
   display: block;
   color: white;
   padding: 0.5rem;
-  background-color: #2e95da;
+  background-color: #3498db;
   border-left: 1px solid white;
 }
 @media only screen and (max-width: 1139px) {
