fixed subnav padding for mobile view

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -120,7 +120,7 @@ header{
 				border-top: 1px solid darken($main-color, 3%);
 
 				@media only screen and (max-width: 1139px){
-					padding-left: $xlarge;
+					padding: $medium $medium $medium $xlarge;
 					border: none;
 				}
 			}
