use constants instead of variables where possible + update link style and added extra comments

--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -100,6 +100,18 @@
 		text-indent: $medium;
 	}
 
+	a{
+		&,
+		&:visited{
+			text-decoration: underline;
+		}
+
+		&:focus,
+		&:hover{
+			color: $main-color;
+		}
+	}
+
 	@media only screen and (max-width: 1139px){
 		width: 100%;
 	}
