--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -974,6 +974,12 @@ header {
   word-wrap: break-word;
   text-indent: 1rem;
 }
+.post--details a, .post--details a:visited {
+  text-decoration: underline;
+}
+.post--details a:focus, .post--details a:hover {
+  color: #3498db;
+}
 @media only screen and (max-width: 1139px) {
   .post--details {
     width: 100%;
