bigger margin for the nav buttons

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -84,7 +84,7 @@ header{
 
 			i{
 				display: inline-block;
-				margin-right: $small;
+				margin-right: $medium;
 				text-decoration: none;
 			}
 		}
