--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -104,7 +104,7 @@ header{
 		@media only screen and (max-width: 1139px){
 			display: block;
 			position: relative;
-			min-width: auto;
+			min-width: none;
 			border-top: none;
 		}
 
