--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -32,6 +32,11 @@
 		text-shadow: 0 1px 0 $fgc;
 	}
 
+	img{
+		@include borderbox;
+		border: 1px solid darken($bgc2, 5%);
+	}
+
 	a{
 		display: inline-block;
 
