--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -760,20 +760,19 @@ header {
   background-color: #eeeeee;
   border: 1px solid #e1e1e1;
   text-shadow: 0 1px 0 white; }
-.post--title img {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 1px solid #e1e1e1; }
 .post--title a {
   display: inline-block; }
   .post--title a:focus, .post--title a:hover {
     text-decoration: underline; }
 
 .post--aside img {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
-  height: auto; }
+  height: auto;
+  border: 1px solid #e1e1e1; }
 @media only screen and (max-width: 1139px) {
   .post--aside {
     display: none; } }
