added extra line-height on post meta

--- a/assets/css/_posts.scss
+++ b/assets/css/_posts.scss
@@ -17,6 +17,10 @@
 				background-color: $bgc2;
 				border: 1px solid darken($bgc2, 5%);
 			}
+
+			li{
+				line-height: 1.5rem;
+			}
 		}
 	}
 }
