--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -748,6 +748,8 @@ header {
       box-sizing: border-box;
       background-color: #eeeeee;
       border: 1px solid #e1e1e1; }
+    .post.single .post--meta li {
+      line-height: 1.5rem; }
 
 .post--title h2 {
   -webkit-box-sizing: border-box;
